--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,10 @@ SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/etc")
 #SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})
 SET(CMAKE_INSTALL_PREFIX "/usr/local/tinychain")
 
-#set(Boost_USE_STATIC_LIBS   ON)
-#FIND_PACKAGE(Boost 1.56 REQUIRED COMPONENTS date_time filesystem system program_options)
-#INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
+set(Boost_USE_STATIC_LIBS   ON)
+FIND_PACKAGE(Boost 1.56 REQUIRED COMPONENTS date_time)
+    #filesystem system program_options)
+INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
 
 # ------------------ includes --------------------
 INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/contrib")
