--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,9 @@ FILE(GLOB_RECURSE tinychain_SOURCES "*.cpp")
 
 ADD_EXECUTABLE(tinychain ${tinychain_SOURCES})
 
-IF(ENABLE_SHARED_LIBS)
+IF(WIN32)
+    TARGET_LINK_LIBRARIES(tinychain ${Boost_LIBRARIES} ${jsoncpp_LIBRARY} ${mongoose_LIBRARY} ${sqlite_LIBRARY})
+ELSEIF(ENABLE_SHARED_LIBS)
     TARGET_LINK_LIBRARIES(tinychain ${Boost_LIBRARIES} ${jsoncpp_LIBRARY} ${mongoose_LIBRARY} sqlite3)
 ELSE()
     TARGET_LINK_LIBRARIES(tinychain ${Boost_LIBRARIES} ${jsoncpp_LIBRARY} ${mongoose_LIBRARY} libsqlite3.a)
